--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -26,6 +26,7 @@
     "rules": {
         "import/no-unresolved": "error",
         "react/jsx-filename-extension": [0],
+        "react/jsx-props-no-spreading": [0],
         "import/extensions": "off"
     },
     "settings": {
