--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "latest",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
