--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "latest",
     "sass": "^1.56.1",
     "zod": "^3.19.1"
