--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "compose:up": "(docker-compose up -d --build)",
     "compose:down": "(docker-compose down --remove-orphans)",
     "compose:up:dev": "(docker-compose -f docker-compose.dev.yml up -d --build)",
-    "compose:down:dev": "(docker-compose -f docker-compose.dev.yml down --remove-orphans)"
+    "compose:down:dev": "(docker-compose -f docker-compose.dev.yml down --remove-orphans)",
+    "install:front": "(cd frontend && npm install)"
   },
   "author": "",
   "license": "ISC"
